@@ -746,8 +746,9 @@ if ($params['group']) {
 		$return= '
 		<tr '.$row_attr;
 		if ( $istitle ) {
-			$return .=' align="middle" bgcolor="'. $this->COLOR_HTMLBOX_TITLE .'">';
+			$return .=' align="middle" bgcolor="'. $this->COLOR_HTMLBOX_TITLE .'"';
 		}
+		$return .= '>';
 		for ( $c = 0; $c < count($cell_data); $c++ ) {
 			$return .='<td ';
 			for ( $a=1; $a < count($cell_data[$c]); $a++) {
