@@ -1,3 +1,8 @@
+2003-01-06  Richard Offer
+
+	* www/include/Layout.class, www/project/showfiles.php: patch #134:
+	fix bug #131 - fix bad quotes and missing close bracket.
+
 2003-01-05 Richard Offer
 
 	* Contributed OSX theme.
